versions/v1.5/modules/en/pages/installation-setup/media/net-install.adoc
= Net Install ISO
:revdate: 2026-01-08
:page-revdate: {revdate}

[WARNING]
====
A critical vulnerability in the {harvester-product-name} interactive installer allows attackers to gain remote shell (SSH) access to the host. If your environment is exposed to untrusted locations, you must either upgrade to v1.7 and use the corresponding interactive installer, or use the xref:pxe-boot-install.adoc[PXE boot installation mechanism] when creating or expanding clusters. For more information, see the https://github.com/harvester/harvester/security/advisories/GHSA-6g8q-hp2j-gvwv[security advisory for CVE-2025-62877].
====

The net install ISO is a minimal installation image that contains only the core operating system components, allowing the installer to boot and then install the operating system on a disk. After installation is completed, the operating system pulls all required container images from the internet (mostly from Docker Hub).

You can use the net install ISO in the following situations:

* The virtual media implementation on a server is buggy or slow. Some users have reported that ISO redirection is too slow to preload all images onto a system. For more information, see https://github.com/harvester/harvester/issues/2651[Issue 2651].
* You have a private registry that contains all {harvester-product-name} images, as well as the knowledge and experience required to configure image mirrors for containerd.

[CAUTION]
====
*You must always use the full ISO to bootstrap a {harvester-product-name} cluster* (in other words, use the ISO without the `-net-install` suffix). The full ISO contains all required images, and the installer preloads those images during installation. You can easily reach the https://docs.docker.com/docker-hub/download-rate-limit/[Docker Hub rate limit] when using a net install ISO to bootstrap the cluster.
====

== Usage

Download the net install ISO from the GitHub https://github.com/harvester/harvester/releases[Releases] page, and then boot the ISO to install {harvester-product-name}. Net install ISO file names have the suffix `net-install` (for example, https://releases.rancher.com/harvester/v1.3.0/harvester-v1.3.0-amd64-net-install.iso).

== PXE Installation

If you decide to use the net install ISO as the PXE installation source, add the following parameter when booting the kernel:

----
harvester.install.with_net_images=true
----

For more information, see xref:../../installation-setup/methods/pxe-boot-install.adoc[PXE Boot Installation].
